# cg_2d_line_drawing

./: 2D_Line_Drawing.cpp  CMakeLists.txt  README.md  main.cpp
Elems/: Circle_MP.h  Drawable.h  Line_DDA.h  Line_MP.h  Point.h
Elems/Circle/: Circle_MP.cpp
Elems/Line/: Line_DDA.cpp  Line_MP.cpp
WM/: WindowManager.cpp  WindowManager.h
